--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title of the document</title>
+  <meta charset="UTF-8">
+  <title>Wild And Wizard</title>
 </head>
-
 <body>
-    <ul>
-        <li>
-            <a href="/doctor/1">
-                William Hartnell
-            </a>
-        </li>
-        <li>
-            <a href="/doctor/10">
-                David Tennant
-            </a>
-        </li>
-        <li>
-            <a href="/doctor/13">
-                Jodie Whittaker
-            </a>
-        </li>
-    </ul>
+<h1>Wild And Wizard</h1>
+<a href="/wizards">Browse all wizards</a>
+<br><br>
+<a href="/schools">Browse all schools</a>
 </body>
-
 </html>
